// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recipient Verification Lists Reducer default 1`] = `
Object {
  "latest": null,
  "listResults": Object {},
  "listResultsLoading": false,
  "singleResults": null,
  "uploadLoading": false,
}
`;

exports[`Recipient Verification Lists Reducer when verification is pending 1`] = `
Object {
  "latest": null,
  "listResults": Object {},
  "listResultsLoading": false,
  "singleResults": null,
  "uploadLoading": false,
}
`;

exports[`Recipient Verification Lists Reducer when verification successfully returns invalid address 1`] = `
Object {
  "latest": null,
  "listResults": Object {},
  "listResultsLoading": false,
  "singleResults": Object {
    "email": "invalid@address.com",
    "reason": undefined,
    "valid": undefined,
  },
  "uploadLoading": false,
}
`;

exports[`Recipient Verification Lists Reducer when verification successfully returns valid address 1`] = `
Object {
  "latest": null,
  "listResults": Object {},
  "listResultsLoading": false,
  "singleResults": Object {
    "email": "valid@address.com",
    "reason": undefined,
    "valid": undefined,
  },
  "uploadLoading": false,
}
`;
